--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                   
                         <!-- Button triggers new movie to be added -->
                         <input id="add-category" type="submit" value="Add a Category">
+                        <input type="button" value="Reset" onClick="this.form.reset()" />
+
                       </form>
                       
                 <!-- <hr class="my-4">
