--- a/index.html
+++ b/index.html
@@ -16,28 +16,6 @@
 
 <body>
 
-    <!-- <div class="jumbotron">
-
-        <h1 class="display-4">I don't Gif a F</h1>
-            <div id="buttons-view"></div>
-            <br>
-        </div>
-
-                <form id="category-form">
-                    <label for="category-input"></label>
-                    <input type="text" id="category-input"> -->
-
-                    <!-- Button triggers new movie to be added -->
-                    <!-- <input id="add-category" type="submit" value="Add">
-                    <input type="button" value="clear" onClick="this.form.reset()" />
-
-                </form> -->
-
-            <!-- <hr class="my-4">
-            <a class="btn btn-primary btn-lg" id role="button">submit</a> -->
-
-
-
         <div class="jumbotron">
 
         <h1 class="display-4">I don't Gif a F</h1>
@@ -52,9 +30,10 @@
 
         <div class="row">
             <div class="col-xs-10 col-s-10 col-md-9 col-lg-9 imageArea">
+                    <div id="image-view"></div>
             </div>
 
-            <div class="col-xs-2 col-s-2 col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1 addArea" id="category-form">
+            <div class="col-xs-2 col-s-2 col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1 addArea">
                 <form>
                     <label for="category-input"></label><br>
                     <input type="text" id="category-input">
