--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type='text/javascript' src="./assets/app.js"></script>
+    <script type='text/javascript' src="./assets/javascript/app.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
+
+    
+    
 
 </head>
 
 <body>
+    <h1>Top Alt Rock Bands of 2018</h1>
 
         <div class="jumbotron">
 
-        <h1 class="display-4">I don't Gif a F</h1>
+        <h2 class="display-4">I don't Gif a F</h2>
 
             <div class="row">
                 <div class="col-xs-12 col-s-12 col-md-12 col-lg-12 buttonArea">
@@ -38,7 +44,7 @@
                     <label for="category-input"></label><br>
                     <input type="text" id="category-input">
 
-                    <input id="add-category" type="submit" value="Add">
+                    <input id="add-category" type="submit" value="Your Fav Band">
                 </form>
             </div>
         </div>
