--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         </div>
 
         <div class="row">
+            <div class="container">
             <div class="col-xs-10 col-s-10 col-md-9 col-lg-9 imageArea">
                     <div id="image-view"></div>
+            </div>
             </div>
 
             <div class="col-xs-2 col-s-2 col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1 addArea">
