--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <h1>Top Alt Rock Bands of 2018</h1>
 
+    <div class="wrapper">
         <div class="jumbotron">
 
         <h2 class="display-4">I don't Gif a F</h2>
@@ -31,8 +32,8 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-10 col-s-10 col-md-9 col-lg-9 imageArea clearfix pull-left">
-                    <div id="image-view"></div>
+            <div class="col-xs-10 col-s-10 col-md-9 col-lg-9 imageArea">
+                    <span><div id="image-view"></div></span>
             </div>
             
 
@@ -46,6 +47,7 @@
                 </form>
             </div>
         </div>
+    </div>
 
 
 </body>
